# gitMidterm1test

./: .env_example  .gitignore  main.py  my_arguments.py  pyproject.toml  readme.md
auth/: auth_ec2.py  auth_rds.py  auth_s3.py
bucket/: bucket.py
create_vpc/: vpc_creation.py
dynamo_db/: dynamo_db.py
launch_ec2/: ec2_launch.py
rds/: rds.py
